# devops-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_main.py
.github/workflows/: cd.yml  ci.yml
