[project]
name = "devops-lab"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "pytest>=9.1.0",
]
