[project]
name = "devops-lab"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.137.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.0",
]
